8243535: NMT may show wrong numbers for CDS and CCS

Reviewed-by: zgu, iklam