src/hotspot/os/posix/os_posix.cpp
@@ -370,6 +370,10 @@ void os::split_reserved_memory(char *base, size_t size, size_t split) {
   assert(split > 0, "Sanity");
   assert(is_aligned(base, os::vm_allocation_granularity()), "Sanity");
   assert(is_aligned(split_address, os::vm_allocation_granularity()), "Sanity");
+
+  // NMT: tell NMT to track both parts individually from now on.
+  MemTracker::record_virtual_memory_split_reserved(base, size, split);
+
 }
 
 int os::vsnprintf(char* buf, size_t len, const char* fmt, va_list args) {
